# devtools_scicomp_project_2025

./: .gitignore  Makefile  pyproject.toml  requirements.txt  run.py.lprof
experiments/: config.yaml  config_numpy.yaml  config_spambase.yaml
logs/: numpy_knn_classifier.txt  slow_knn_classifier.txt  spam_numba_knn_classifier.txt  spam_numpy_knn_classifier.txt
scripts/: run.py
shell/: submit.sbatch  submit.sh  submit_spam.sh
src/pyclassify/: __init__.py  _compile.py  classifier.py  datamodule.py  model.py  module.py  utils.py
test/: test_.py
